--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,6 +2,7 @@
 	<header>
 		<h1><%= @projects.name %></h1>
 	</header>
+	<%= link_to("All Projects", projects_path) %>
 	<h2>Description</h2>
 	<p>
 		<%= @projects.description %>
