Completed exercise 14 Destroy

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
 	<header>
 		<h1><%= @projects.name %></h1>
 	</header>
-	<%= link_to("All Projects", projects_path) %>
+	
 	<h2>Description</h2>
 	<p>
 		<%= @projects.description %>
@@ -20,3 +20,9 @@
 		<%= time_remaining(@projects) %>
 	</p>
 </article>
+
+<nav>
+	<%= link_to "All Projects", projects_path %> |
+	<%= link_to "Edit", edit_project_path %> |
+	<%= link_to "Delete", project_path(@projects),method: :delete, data: { confirm: 'Are you sure?' } %>
+</nav>
